fix(ChatHeader): Shadow overlapped by messages

--- a/src/components/Dialogs/ChatHeader/ChatHeader.module.css
+++ b/src/components/Dialogs/ChatHeader/ChatHeader.module.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: var(--padding-primary);
+  z-index: 1;
 
   box-shadow: 0 0 0.7em rgba(32, 16, 16, 0.2);
   clip-path: inset(0 0 -2em 0);
