--- a/src/components/Dialogs/DialogsList/DialogsList.module.scss
+++ b/src/components/Dialogs/DialogsList/DialogsList.module.scss
@@ -1,6 +1,6 @@
 .Wrapper {
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   transform: translateX(0);
   transition: transform 0.2s cubic-bezier(0, 0.77, 0.72, 1.03);
 
